--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="cursor"></div>
+    <script type="text/javascript">
+      const cursor = document.querySelector(".cursor");
+      document.addEventListener("mousemove", (e) => {
+        let x = e.pageX;
+        let y = e.pageY;
+
+        cursor.style.top = y + "px";
+        cursor.style.left = x + "px";
+        cursor.style.display = "block";
+      });
+
+      document.addEventListener("mouseout", () => {
+        cursor.style.display = "none";
+      });
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
