--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmovo</title>
   </head>
-  <body>
+  <body style="margin: 0;">
     <div id="root"></div>
     <div class="cursor"></div>
     <script type="text/javascript">
